[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/ShopHud.gd" type="Script" id=1]
[ext_resource path="res://Assets/Loja_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/PistolaDePlasma (2).png" type="Texture" id=3]
[ext_resource path="res://Assets/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/ExportedLayers/RifleDePlasma.png" type="Texture" id=5]
[ext_resource path="res://EuBraBo/Sounds/RVS music 3.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 4
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 1, 0.188235 )
shadow_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.133333, 1, 0.117647 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=8]
resource_name = "Close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, -2, -2, -0.5, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 1, -0.3 ), Vector2( 1, 0.2 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 2, -2, -2, -0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 1.3 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="ShopHud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 192, 96 )

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 0.776471, 0.776471, 0.776471, 0.666667 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ShopBase" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 2 )

[node name="ShopPart1" type="Control" parent="Control/ShopBase"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0

[node name="ItemIcon" type="TextureRect" parent="Control/ShopBase/ShopPart1"]
anchor_left = 0.086
anchor_top = 0.371
anchor_right = 0.18
anchor_bottom = 0.465
margin_left = 3.984
margin_top = 4.02399
margin_right = -4.08
margin_bottom = -4.04001
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="ItemName" type="Label" parent="Control/ShopBase/ShopPart1"]
margin_left = 51.0
margin_top = 98.0
margin_right = 87.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.188235, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "pistola de plasma"
align = 1
valign = 3
autowrap = true
uppercase = true

[node name="ItemDescription" type="Label" parent="Control/ShopBase/ShopPart1"]
margin_left = 17.0
margin_top = 136.0
margin_right = 85.0
margin_bottom = 154.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aa  aa a  a  aaaaaaaaaaaaa"
valign = 2
autowrap = true
uppercase = true

[node name="Button1" type="Button" parent="Control/ShopBase/ShopPart1"]
margin_left = 16.0
margin_top = 179.0
margin_right = 86.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )

[node name="BuyText" type="Label" parent="Control/ShopBase/ShopPart1"]
margin_left = 12.0
margin_top = 180.0
margin_right = 65.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "buy "
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="CoinsQuantity" type="Label" parent="Control/ShopBase/ShopPart1"]
margin_left = 52.0
margin_top = 180.0
margin_right = 75.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "99c"
align = 1
valign = 1
uppercase = true

[node name="ShopPart2" type="Control" parent="Control/ShopBase"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = -1.0
margin_right = 78.0
margin_bottom = -1.0

[node name="ItemIcon" type="TextureRect" parent="Control/ShopBase/ShopPart2"]
anchor_left = 0.086
anchor_top = 0.387
anchor_right = 0.148
anchor_bottom = 0.449
margin_left = -8.016
margin_top = -8.07201
margin_right = 8.112
margin_bottom = 8.05599
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ItemName" type="Label" parent="Control/ShopBase/ShopPart2"]
margin_left = 51.0
margin_top = 98.0
margin_right = 87.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.188235, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "pistola de plasma"
align = 1
valign = 3
autowrap = true
uppercase = true

[node name="ItemDescription" type="Label" parent="Control/ShopBase/ShopPart2"]
margin_left = 17.0
margin_top = 136.0
margin_right = 85.0
margin_bottom = 154.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aa  aa a  a  aaaaaaaaaaaaa"
valign = 2
autowrap = true
uppercase = true

[node name="Button2" type="Button" parent="Control/ShopBase/ShopPart2"]
margin_left = 16.0
margin_top = 179.0
margin_right = 86.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )

[node name="BuyText" type="Label" parent="Control/ShopBase/ShopPart2"]
margin_left = 12.0
margin_top = 180.0
margin_right = 65.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "buy "
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="CoinsQuantity" type="Label" parent="Control/ShopBase/ShopPart2"]
margin_left = 52.0
margin_top = 180.0
margin_right = 75.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "99c"
align = 1
valign = 1
uppercase = true

[node name="ShopPart3" type="Control" parent="Control/ShopBase"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 155.0
margin_top = -1.0
margin_right = 155.0
margin_bottom = -1.0

[node name="ItemIcon" type="TextureRect" parent="Control/ShopBase/ShopPart3"]
anchor_left = 0.086
anchor_top = 0.371
anchor_right = 0.18
anchor_bottom = 0.465
margin_left = 3.984
margin_top = 4.02399
margin_right = -4.08
margin_bottom = -4.04001
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="ItemName" type="Label" parent="Control/ShopBase/ShopPart3"]
margin_left = 51.0
margin_top = 98.0
margin_right = 87.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.188235, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "pistola de plasma"
align = 1
valign = 3
autowrap = true
uppercase = true

[node name="ItemDescription" type="Label" parent="Control/ShopBase/ShopPart3"]
margin_left = 17.0
margin_top = 136.0
margin_right = 85.0
margin_bottom = 154.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 1 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aa  aa a  a  aaaaaaaaaaaaa"
valign = 2
autowrap = true
uppercase = true

[node name="Button" type="Button" parent="Control/ShopBase/ShopPart3"]
margin_left = 16.0
margin_top = 179.0
margin_right = 86.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )

[node name="BuyText" type="Label" parent="Control/ShopBase/ShopPart3"]
margin_left = 12.0
margin_top = 180.0
margin_right = 65.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "buy "
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="CoinsQuantity" type="Label" parent="Control/ShopBase/ShopPart3"]
margin_left = 52.0
margin_top = 180.0
margin_right = 75.0
margin_bottom = 198.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 7 )
text = "99c"
align = 1
valign = 1
uppercase = true

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 8 )
anims/Open = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="Control/ShopBase/ShopPart1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Control/ShopBase/ShopPart2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/ShopBase/ShopPart3/Button" to="." method="_on_Button_pressed"]
